--- a/Home/index.html
+++ b/Home/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
     <link rel="icon" href="Favicon/favicon.ico">
     <link rel="manifest" href="Favicon/site.webmanifest">
-    <link rel="stylesheet" href="https://github.com/musfiqurjahin/-/blob/main/root_modules/CSS/styles.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/musfiqurjahin/-/main/root_modules/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
@@ -95,7 +95,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="script.js"></script>
-    <script src="https://github.com/musfiqurjahin/-/blob/main/root_modules/JavaScript/app.js"></script>
+    <script src="https://raw.githubusercontent.com/musfiqurjahin/-/main/root_modules/JavaScript/app.js"></script>
     <!-- Footer HTML -->
     <footer>
         <div class="footer-content">
