--- a/about/index.htm
+++ b/about/index.htm
@@ -37,12 +37,12 @@
                         <span></span>
                     </div>
                     <ul class="navlinks">
-                        <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="code-runner.htm"><i class="fas fa-code"></i> Coding</a></li>
-                        <li><a href="404-Error.htm"><i class="fas fa-laptop-code"></i> Terminal</a></li>
-                        <li><a href="blogs.htm"><i class="fas fa-blog"></i> Blog</a></li>
-                        <li><a href="messenger.htm"><i class="fab fa-facebook-messenger"></i> Send Message</a></li>
-                    </ul>
+                      <li><a href="../home/index.htm"><i class="fas fa-home"></i> Home</a></li>
+                      <li><a href="../coding/index.htm"><i class="fas fa-code"></i> Coding</a></li>
+                      <li><a href="../4O4 Error!/index.htm"><i class="fas fa-laptop-code"></i> Terminal</a></li>
+                      <li><a href="../blogs/index.htm"><i class="fas fa-blog"></i> Blog</a></li>
+                      <li><a href="../contact/index.htm"><i class="fab fa-facebook-messenger"></i> Send Message</a></li>
+                  </ul>
                 </nav>
             </header>
             <div class="container">
@@ -118,7 +118,7 @@
                       </div>
                     </div>
                     <div class="btn-group">
-                        <a href="projects.htm" class="btn">Explore my Projects</a>
+                        <a href="../projects/projects.htm" class="btn">Explore my Projects</a>
                     </div>
                     <div>
                         <svg viewBox="0 0 960 300">
@@ -225,7 +225,7 @@
     <footer>
       <div class="footer-content">
           <p>&copy; 2024; All rights reserved.</p>
-          <p>Developed by <a href="home.html" class="developer-link">me</a> 
+          <p>Developed by <a href="../home/index.htm" class="developer-link">me</a> 
           <img src="root_modules/Images/Anonymous.img/Red_Mask-2.png" alt="Developer Badge" class="developer-badge"></p>
       </div>
   </footer>
