--- a/coding/index.htm
+++ b/coding/index.htm
@@ -99,11 +99,11 @@
                         <span></span>
                     </div>
                     <ul class="navlinks">
-                        <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="code-runner.htm"><i class="fas fa-code"></i> Coding</a></li>
-                        <li><a href="404-Error.htm"><i class="fas fa-laptop-code"></i> Terminal</a></li>
-                        <li><a href="blogs.htm"><i class="fas fa-blog"></i> Blog</a></li>
-                        <li><a href="messenger.htm"><i class="fab fa-facebook-messenger"></i> Send Message</a></li>
+                        <li><a href="../home/index.htm"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="../coding/index.htm"><i class="fas fa-code"></i> Coding</a></li>
+                        <li><a href="../4O4 Error!/index.htm"><i class="fas fa-laptop-code"></i> Terminal</a></li>
+                        <li><a href="../blogs/index.htm"><i class="fas fa-blog"></i> Blog</a></li>
+                        <li><a href="../contact/index.htm"><i class="fab fa-facebook-messenger"></i> Send Message</a></li>
                     </ul>
                 </nav>
             </header>
