--- a/about/index.htm
+++ b/about/index.htm
@@ -37,11 +37,11 @@
                         <span></span>
                     </div>
                     <ul class="navlinks">
-                      <li><a href="../home/index.htm"><i class="fas fa-home"></i> Home</a></li>
-                      <li><a href="../coding/index.htm"><i class="fas fa-code"></i> Coding</a></li>
-                      <li><a href="../4O4 Error!/index.htm"><i class="fas fa-laptop-code"></i> Terminal</a></li>
-                      <li><a href="../blogs/index.htm"><i class="fas fa-blog"></i> Blog</a></li>
-                      <li><a href="../contact/index.htm"><i class="fab fa-facebook-messenger"></i> Send Message</a></li>
+                      <li><a href="../home/"><i class="fas fa-home"></i> Home</a></li>
+                      <li><a href="../coding/"><i class="fas fa-code"></i> Coding</a></li>
+                      <li><a href="../4O4 Error!/"><i class="fas fa-laptop-code"></i> Terminal</a></li>
+                      <li><a href="../blogs/"><i class="fas fa-blog"></i> Blog</a></li>
+                      <li><a href="../contact/"><i class="fab fa-facebook-messenger"></i> Send Message</a></li>
                   </ul>
                 </nav>
             </header>
@@ -118,7 +118,7 @@
                       </div>
                     </div>
                     <div class="btn-group">
-                        <a href="../projects/projects.htm" class="btn">Explore my Projects</a>
+                        <a href="../projects/" class="btn">Explore my Projects</a>
                     </div>
                     <div>
                         <svg viewBox="0 0 960 300">
