--- a/4O4 Error!/index.htm
+++ b/4O4 Error!/index.htm
@@ -152,7 +152,7 @@
                 <br>
             </div>
             <h4></h4>
-        <a href="../home/index.htm"><button><i class="fas fa-home"></i> Back to Home &#8599;</button></a>
+        <a href="../home/"><button><i class="fas fa-home"></i> Back to Home &#8599;</button></a>
             <canvas id="dotsCanvas"></canvas>
         </div>
     </main>    
