--- a/blogs/index.htm
+++ b/blogs/index.htm
@@ -151,7 +151,7 @@ button.addEventListener('click', function() {
     setInterval(updateTimeAndDate, 1000);
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
-    <script src="root_modules/JavaScript/app.js"></script>
+    <script src="https://musfiqurjahin.github.io/-/root_modules/JavaScript/app.js"></script>
 
     <!-- Footer HTML -->
 <footer>
