--- a/blogs/index.htm
+++ b/blogs/index.htm
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
     <link rel="icon" href="Favicon/favicon.ico">
     <link rel="manifest" href="Favicon/site.webmanifest">
-    <link rel="stylesheet" href="root_modules/CSS/styles.css">
+    <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
