--- a/4O4 Error!/index.htm
+++ b/4O4 Error!/index.htm
@@ -6,7 +6,7 @@
 <title>404-ErroR!</title>
 <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="stylesheet" href="root_modules/CSS/styles.css">
+<link rel="stylesheet" href="../root_modules/CSS/styles.css">
 <style>
     body{
     color: #1eff00;
@@ -223,6 +223,6 @@
     drawDots();
 })
     </script>
-    <script src="root_modules/JavaScript/app.js"></script>
+    <script src="../root_modules/JavaScript/app.js"></script>
 </body>
 </html>
