--- a/about/index.htm
+++ b/about/index.htm
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
     <link rel="icon" href="Favicon/favicon.ico">
     <link rel="manifest" href="Favicon/site.webmanifest">
-    <link rel="stylesheet" href="https://musfiqurjahin.github.io/-/root_modules/CSS/styles.css">
+    <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
@@ -221,7 +221,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
-    <script src="https://musfiqurjahin.github.io/-/root_modules/JavaScript/app.js"></script>
+    <script src="../root_modules/JavaScript/app.js"></script>
     <footer>
       <div class="footer-content">
           <p>&copy; 2024; All rights reserved.</p>
