--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="../root_modules/CSS/styles.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,5 +17,6 @@
             })
             .catch(error => console.error('Error fetching the home page:', error));
     </script>
+<script src="../root_modules/JavaScript/app.js"></script>
 </body>
 </html>
