--- a/4O4 Error!/index.htm
+++ b/4O4 Error!/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" type="image/png" sizes="512x512" href="https://www.flaticon.com/free-icon/error-404_3855833">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>404-ErroR!</title>
