--- a/contact/index.htm
+++ b/contact/index.htm
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="192x192" href="Favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="Favicon/android-chrome-512x512.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="Favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="icon" href="Favicon/favicon.ico">
-    <link rel="manifest" href="Favicon/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="192x192" href="../Favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="../Favicon/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../Favicon/favicon-16x16.png">
+    <link rel="icon" href="../Favicon/favicon.ico">
+    <link rel="manifest" href="../Favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
