--- a/home/index.htm
+++ b/home/index.htm
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musfiqur Jahin>_ Home</title>
-    <link rel="icon" type="image/png" sizes="192x192" href="Favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="Favicon/android-chrome-512x512.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="Favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../Favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="../Favicon/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../Favicon/favicon-16x16.png">
     <link rel="icon" href="Favicon/favicon.ico">
     <link rel="manifest" href="Favicon/site.webmanifest">
     <link rel="stylesheet" href="../root_modules/CSS/styles.css">
