--- a/coding/index.htm
+++ b/coding/index.htm
@@ -12,7 +12,7 @@
     <link rel="icon" href="../Favicon/favicon.ico">
     <link rel="manifest" href="Favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../home/index.htm">
+    <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 <style>
