--- a/4O4 Error!/index.htm
+++ b/4O4 Error!/index.htm
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" type="image/png" sizes="512x512" href="https://www.flaticon.com/free-icon/error-404_3855833">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>404-ErroR!</title>
+<link rel="icon" href="../Favicon/404.png">
+<link rel="manifest" href="../Favicon/site.webmanifest">
 <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="stylesheet" href="../root_modules/CSS/styles.css">
