--- a/about/index.htm
+++ b/about/index.htm
@@ -5,13 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musfiqur Jahin>_ About</title>
-    <link rel="icon" type="image/png" sizes="192x192" href="../Favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="../Favicon/android-chrome-512x512.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../Favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../Favicon/favicon-16x16.png">
-    <link rel="icon" href="../Favicon/favicon.ico">
-    <link rel="manifest" href="Favicon/site.webmanifest">
+    <link rel="icon" href="../Favicon/favicon.png">
+    <link rel="manifest" href="../Favicon/site.webmanifest">
     <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
