--- a/coding/index.htm
+++ b/coding/index.htm
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../Favicon/favicon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Favicon/favicon.png">
     <link rel="icon" href="../Favicon/favicon.png">
-    <link rel="manifest" href="Favicon/site.webmanifest">
+    <link rel="manifest" href="../Favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
