--- a/home/index.htm
+++ b/home/index.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musfiqur Jahin>_ Home</title>
     <link rel="icon" href="../Favicon/favicon.png">
+    <link rel="manifest" href="../Favicon/site.webmanifest">
     <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
