--- a/4O4 Error!/index.htm
+++ b/4O4 Error!/index.htm
@@ -109,6 +109,7 @@
     -webkit-text-fill-color: transparent;
     text-transform: uppercase;
     line-height: 1em;
+    z-index: 1;
 
     }
     h1.right{
@@ -125,6 +126,14 @@
     top: 0;
     left: 0;
     pointer-events: none;
+    }
+
+    .h2{
+        z-index: 1;
+    }
+
+    .h3{
+        z-index: 1;
     }
     </style>
     </head>
