--- a/home/index.htm
+++ b/home/index.htm
@@ -59,7 +59,7 @@
                     <ul class="navlinks">
                         <li><a href="../home/"><i class="fas fa-home"></i> Home</a></li>
                         <li><a href="../coding/"><i class="fas fa-code"></i> Coding</a></li>
-                        <li><a href="../4O4 Error!/"><i class="fas fa-laptop-code"></i> Terminal</a></li>
+                        <li><a href="../4O4-Error!/"><i class="fas fa-laptop-code"></i> Terminal</a></li>
                         <li><a href="../blogs/"><i class="fas fa-blog"></i> Blog</a></li>
                         <li><a href="../contact/"><i class="fab fa-facebook-messenger"></i> Send Message</a></li>
                     </ul>
