--- a/projects/index.htm
+++ b/projects/index.htm
@@ -6,7 +6,7 @@
     <title>Musfiqur_Jahin>_ Projects</title>
     <link rel="icon" href="../Favicon/favicon.png">
     <link rel="manifest" href="../Favicon/site.webmanifest">
-    <link rel="stylesheet" href="root_modules/CSS/styles.css">
+    <link rel="stylesheet" href="../root_modules/CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
@@ -95,7 +95,7 @@
     </div>
     </div>
     </div>
-    <script src="root_modules/JavaScript/app.js"></script>
+    <script src="../root_modules/JavaScript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <footer>
         <div class="footer-content">
