--- a/projects/index.htm
+++ b/projects/index.htm
@@ -20,8 +20,8 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <a href="home.html"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo" class="logo-img"></a>
-                    <div class="logo-text"></div>
+                <a href="home.html"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo" class="logo-img"></a>
+                <div class="logo-text"></div>
                 </div>
                 <nav>
                     <div class="togglebtn">
@@ -47,10 +47,10 @@
     <div class="project-details">
         <h1>Canvas X WireFrame-Raptor</h1>
         <br>
-        <h2><strong>Languages Used:</strong> JavaScript</h2>
+        <h2><u>Languages Used</u>: JavaScript</h2>
         <br>
-        <a href="404-Error.htm" class="view-btn">Live Preview &#8599</a> 
-        <a href="sendANYmessage_to_JaHIN.htm" class="view-btn"><i class="fas fa-download"></i> Source Code</a> 
+        <a href="../4O4-Error!/" class="view-btn">Live Preview &#8599</a> 
+        <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a> 
     </div>
 </div>
 
@@ -60,7 +60,7 @@
     <div class="project-details">
         <h1>Animated-Text</h1>
         <br>
-        <h2><strong>Languages Used:</strong> Basic HTML & CSS</h2>
+        <h2><u>Languages Used</u>: Basic HTML & CSS </h2>
         <br>
         <a href="https://musfiqurjahin.github.io/Projects/Animated-Text/index.html" class="view-btn">Live Preview &#8599</a> 
         <a href="https://github.com/musfiqurjahin/Animated-Text/archive/refs/heads/main.zip" class="view-btn"><i class="fas fa-download"></i> Source Code</a> 
@@ -73,10 +73,10 @@
     <div class="project-details">
         <h1>Cyber Serpent Chase</h1>
         <br>
-        <h2><strong>Languages Used:</strong> HTML, CSS, & JavaScript.</h2>
+        <h2><u>Languages Used</u>: HTML, CSS, & JavaScript.</h2>
         <br>
         <a href="https://musfiqurjahin.github.io/Projects/Cyber_Serpent_Chase.html" class="view-btn"><i class="fas fa-play"></i> Play</a>                        
-        <a href="sendANYmessage_to_JaHIN.htm" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
+        <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
     </div>
 </div>
 
@@ -84,12 +84,12 @@
 <div class="project-card">
     <img src="root_modules/Images/Projects.img/Cyber_Grid_Clash.jpg" alt="Project-1" class="project-img">
     <div class="project-details">
-        <h1>Cyber Grid Clash</h1>
-        <br>    
-        <h2><strong>Languages Used:</strong> HTML, CSS & JavaScript.</h2>
-        <br>
-        <a href="https://musfiqurjahin.github.io/Projects/Cyber-Grid-Clash.html" class="view-btn"><i class="fas fa-play"></i> Play</a>                        
-        <a href="sendANYmessage_to_JaHIN.htm" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
+         <h1>Cyber Grid Clash</h1>
+         <br>    
+         <h2><u>Languages Used</u>: HTML, CSS & JavaScript.</h2>
+         <br>
+         <a href="https://musfiqurjahin.github.io/Projects/Cyber-Grid-Clash.html" class="view-btn"><i class="fas fa-play"></i> Play</a>                        
+         <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
     </div>
     </div>
     </div>
@@ -97,6 +97,7 @@
     </div>
     <script src="../root_modules/JavaScript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
+    <!--Footer html-->
     <footer>
         <div class="footer-content">
             <p>&copy; 2024; All rights reserved.</p>
