--- a/4O4-Error!/index.htm
+++ b/4O4-Error!/index.htm
@@ -92,7 +92,7 @@
     background-color: #ff0000;
     color: #ffffff;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    transform: translateY(-2px) scale(2.0); /* Zoom effect */
+    transform: translateY(-2px) scale(1.5); /* Zoom effect */
     z-index: 10; /* Bring the button above other elements */
 }
 .banner a button i {
@@ -140,11 +140,11 @@
     <body>
  <!-- Loader HTML -->
  <div class="loader-container" id="loader">
-    <img src="root_modules/Images/Loader.png/Loader.png" alt="Loader Image" class="loader-image">
+    <img src="../root_modules/Images/Loader.img/Loader.png" alt="Loader.img" class="loader-image">
 </div>
 <!--End of Loader HTML-->
          <header>
-            <figure><img src="root_modules/Images/Logo.jpg/Logo.jpg"></figure>
+            <figure><img src="../root_modules/Images/Logo.img/Logo.jpg" alt="Logo.img"></figure>
             <nav></nav>
         </header>
         <main>
