--- a/about/index.htm
+++ b/about/index.htm
@@ -14,14 +14,14 @@
 <body>
     <!-- Loader HTML -->
     <div class="loader-container" id="loader">
-        <img src="root_modules/Images/Loader.png/Loader.png" alt="Loader Image" class="loader-image">
+        <img src="../root_modules/Images/Loader.img/Loader.png" alt="Loader.img" class="loader-image">
     </div>
     <!--End of Loader HTML-->
     <div class="about-header">
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <a href="home.html"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo.img" class="logo-img"></a>
+                    <a href="../home/"><img src="../root_modules/Images/Logo.img/" alt="Logo.img" class="logo-img"></a>
                     <div class="logo-text"></div>
                 </div>
                 <nav>
@@ -56,61 +56,65 @@
                     </svg>
                     <div class="skills-tiles">
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/HTML.png" alt="HTML" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/HTML.png" alt="HTML" class="skill-icon">
                           <span>HTML</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/CSS.png" alt="CSS" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/CSS.png" alt="CSS" class="skill-icon">
                           <span>CSS</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/JavaScript.png" alt="JavaScript" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/JavaScript.png" alt="JavaScript" class="skill-icon">
                           <span>JavaScript</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/Python.png" alt="Python" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/Python.png" alt="Python" class="skill-icon">
                           <span>Python</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/SQL.png" alt="SQL" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/SQL.png" alt="SQL" class="skill-icon">
                           <span>SQL</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/PHP.png" alt="PHP" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/PHP.png" alt="PHP" class="skill-icon">
                           <span>PHP</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/C.png" alt="C" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/C.png" alt="C" class="skill-icon">
                           <span>C</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/C++.png" alt="C++" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/C++.png" alt="C++" class="skill-icon">
                           <span>C++</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/Java.png" alt="Java" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/Java.png" alt="Java" class="skill-icon">
                           <span>Java</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/TypeScript.png" alt="TypeScript" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/TypeScript.png" alt="TypeScript" class="skill-icon">
                           <span>TypeScript</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/Ruby.png" alt="Ruby" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/Ruby.png" alt="Ruby" class="skill-icon">
                           <span>Ruby</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/NodeJS.png" alt="Node.js" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/NodeJS.png" alt="Node.js" class="skill-icon">
                           <span>Node.js</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/PowerShell.png" alt="PowerShell" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/PowerShell.png" alt="PowerShell" class="skill-icon">
                           <span>PowerShell</span>
                       </div>
                       <div class="tile">
-                          <img src="root_modules/Images/lng.png/Haskell.png" alt="Haskell" class="skill-icon">
+                          <img src="../root_modules/Images/Program.img/Haskell.png" alt="Haskell" class="skill-icon">
                           <span>Haskell</span>
                       </div>
+                      <div class="tile">
+                        <img src="../root_modules/Images/Program.img/Blockchain.png" alt="Blockchain" class="skill-icon">
+                        <span>BlockChain</span>
+                    </div>
                     </div>
                     <div class="btn-group">
                         <a href="../projects/" class="btn">Explore my Projects</a>
@@ -220,8 +224,8 @@
     <footer>
       <div class="footer-content">
           <p>&copy; 2024; All rights reserved.</p>
-          <p>Developed by <a href="../home/index.htm" class="developer-link">me</a> 
-          <img src="root_modules/Images/Anonymous.img/Red_Mask-2.png" alt="Developer Badge" class="developer-badge"></p>
+          <p>Developed by <a href="../home/" class="developer-link">me</a> 
+          <img src="../root_modules/Images/Anonymous.img/Red_Mask-1.png" alt="Developer Badge" class="developer-badge"></p>
       </div>
   </footer>
   <!-- End of Footer HTML -->
