--- a/contact/index.htm
+++ b/contact/index.htm
@@ -162,14 +162,14 @@
 <body>
 <!-- Loader HTML -->
  <div class="loader-container" id="loader">
-    <img src="root_modules/Images/Loader.png/Loader.png" alt="Loader Image" class="loader-image">
+    <img src="../root_modules/Images/Loader.img/Loader.png" alt="Loader.img" class="loader-image">
 </div>
 <!--End of Loader HTML-->
     <div class="hero-header">
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <a href="home.html"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo.img" class="logo-img"></a>
+                    <a href="../home/"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo.img" class="logo-img"></a>
                     <div class="logo-text"></div>
                 </div>
                 <nav>
@@ -344,8 +344,8 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2024; All rights reserved.</p>
-            <p>Developed by <a href="home.html" class="developer-link">me</a> 
-            <img src="root_modules/Images/Anonymous.img/Red_Mask-2.png" alt="Developer Badge" class="developer-badge"></p>
+            <p>Developed by <a href="../home/" class="developer-link">me</a> 
+            <img src="../root_modules/Images/Anonymous.img/Red_Mask-1.png" alt="Developer Badge" class="developer-badge"></p>
         </div>
     </footer>
     <!-- End of Footer HTML -->
