--- a/home/index.htm
+++ b/home/index.htm
@@ -38,7 +38,7 @@
 
     <!-- Loader HTML -->
     <div class="loader-container" id="loader">
-        <img src="root_modules/Images/Loader.png/Loader.png" alt="Loader Image" class="loader-image">
+        <img src="../root_modules/Images/Loader.img/Loader.png" alt="Loader.img" class="loader-image">
     </div>
     <!--End of Loader HTML-->
 
@@ -46,7 +46,7 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                   <a href="home.html"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo.img" class="logo-img"></a>
+                   <a href="../home/"><img src="../root_modules/Images/Logo.img/Logo.jpg" alt="Logo.img" class="logo-img"></a>
                     <div class="logo-text"></div>
                 </div>
                 <nav>
@@ -67,11 +67,11 @@
             </header>
             <div class="container">
                 <div class="hero-pic">
-                    <img src="root_modules/Images/Profile.img/Profile_pic-2.jpg" alt="Profile-Pic">
+                    <img src="../root_modules/Images/Profile.img/Profile_pic-2.jpg" alt="Profile.img">
                 </div>
                 <div class="hero-text">
                     <h5>>_<span class="input"></span></h5>
-                    <h1> Musfiqur Jahin <img src="root_modules/Images/Verified_Badges/Red_Badge-1.png" alt="Verified Badge" class="verified-badge"></h1>
+                    <h1> Musfiqur Jahin <img src="../root_modules/Images/Verified.img/Red_Badge-1.png" alt="Verified Badge" class="verified-badge"></h1>
                     <br>
                     <p>A seasoned Cyber Security Specialist and Full Stack Web Developer with a passion for creating secure and robust digital solutions. With a strong foundation in both front-end and back-end development, I blend technical expertise with innovative thinking to deliver comprehensive web applications that are not only efficient but also resilient against cyber threats.
 
@@ -87,7 +87,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="script.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
@@ -95,8 +94,8 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2024; All rights reserved.</p>
-            <p>Developed by <a href="home.html" class="developer-link">me</a> 
-            <img src="root_modules/Images/Anonymous.img/Red_Mask-2.png" alt="Developer Badge" class="developer-badge"></p>
+            <p>Developed by <a href="../home/" class="developer-link">me</a> 
+            <img src="../root_modules/Images/Anonymous.img/Red_Mask-1.png" alt="Developer Badge" class="developer-badge"></p>
         </div>
     </footer>
     <!-- End of Footer HTML -->
