--- a/projects/index.htm
+++ b/projects/index.htm
@@ -13,14 +13,14 @@
 <body>
 <!-- Loader HTML -->
  <div class="loader-container" id="loader">
-    <img src="root_modules/Images/Loader.png/Loader.png" alt="Loader Image" class="loader-image">
+    <img src="../root_modules/Images/Loader.img/Loader.png" alt="Loader.img" class="loader-image">
 </div>
 <!--End of Loader HTML-->
     <div class="hero-header">
         <div class="wrapper">
             <header>
                 <div class="logo">
-                <a href="home.html"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo" class="logo-img"></a>
+                <a href="../home/"><img src="../root_modules/Images/Logo.img/Logo.jpg" alt="Logo.img" class="logo-img"></a>
                 <div class="logo-text"></div>
                 </div>
                 <nav>
@@ -40,60 +40,64 @@
                 </nav>
             </header>
 
-            <div class="projects-wrapper">
-                <!-- Project 4 -->
-<div class="project-card">
-    <img src="root_modules/Images/Projects.img/WireFrameRaptor.png" alt="Project-4" class="project-img">
-    <div class="project-details">
-        <h1>Canvas X WireFrame-Raptor</h1>
-        <br>
-        <h2><u>Languages Used</u>: JavaScript</h2>
-        <br>
-        <a href="../4O4-Error!/" class="view-btn">Live Preview &#8599</a> 
-        <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a> 
-    </div>
-</div>
+        <div class="projects-wrapper">
+          <!-- Project 4 -->
+          <div class="project-card">
+          <img src="../root_modules/Images/Projects.img/WireFrameRaptor.png" alt="Project-4.img" class="project-img">
+          <div class="project-details">
+          <h1>Canvas X WireFrame-Raptor</h1>
+          <br>
+          <h2><u>Languages Used</u>: JavaScript</h2>
+          <br>
+          <a href="../4O4-Error!/" class="view-btn">Live Preview &#8599</a> 
+          <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a> 
+          </div>
+          </div>
+          <!--------------------------------------------------------------------------------------------------------->
 
-<!-- Project 3 -->
-<div class="project-card">
-    <img src="root_modules/Images/Projects.img/Animated-Text.png" alt="Project-3" class="project-img">
-    <div class="project-details">
-        <h1>Animated-Text</h1>
-        <br>
-        <h2><u>Languages Used</u>: Basic HTML & CSS </h2>
-        <br>
-        <a href="https://musfiqurjahin.github.io/Projects/Animated-Text/index.html" class="view-btn">Live Preview &#8599</a> 
-        <a href="https://github.com/musfiqurjahin/Animated-Text/archive/refs/heads/main.zip" class="view-btn"><i class="fas fa-download"></i> Source Code</a> 
-    </div>
-</div>
+          <!-- Project 3 -->
+          <div class="project-card">
+          <img src="../root_modules/Images/Projects.img/Animated-Text.png" alt="Project-3.img" class="project-img">
+          <div class="project-details">
+          <h1>Animated-Text</h1>
+          <br>
+          <h2><u>Languages Used</u>: Basic HTML & CSS </h2>
+          <br>
+          <a href="https://musfiqurjahin.github.io/Projects/Animated-Text/index.html" class="view-btn">Live Preview &#8599</a> 
+          <a href="https://github.com/musfiqurjahin/Animated-Text/archive/refs/heads/main.zip" class="view-btn"><i class="fas fa-download"></i> Source Code</a> 
+          </div>
+          </div>
+          <!--------------------------------------------------------------------------------------------------------->
 
-<!-- Project 2 -->
-<div class="project-card">
-    <img src="root_modules/Images/Projects.img/Cyber_Serpent_Chase.jpg" alt="Project-2" class="project-img">
-    <div class="project-details">
-        <h1>Cyber Serpent Chase</h1>
-        <br>
-        <h2><u>Languages Used</u>: HTML, CSS, & JavaScript.</h2>
-        <br>
-        <a href="https://musfiqurjahin.github.io/Projects/Cyber_Serpent_Chase.html" class="view-btn"><i class="fas fa-play"></i> Play</a>                        
-        <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
-    </div>
-</div>
+          <!-- Project 2 -->
+          <div class="project-card">
+          <img src="../root_modules/Images/Projects.img/Cyber_Serpent_Chase.jpg" alt="Project-2.img" class="project-img">
+          <div class="project-details">
+          <h1>Cyber Serpent Chase</h1>
+          <br>
+          <h2><u>Languages Used</u>: HTML, CSS, & JavaScript.</h2>
+          <br>
+          <a href="https://musfiqurjahin.github.io/Projects/Cyber_Serpent_Chase.html" class="view-btn"><i class="fas fa-play"></i> Play</a>                        
+          <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
+          </div>
+          </div>
+          <!--------------------------------------------------------------------------------------------------------->
 
-<!-- Project 1 -->
-<div class="project-card">
-    <img src="root_modules/Images/Projects.img/Cyber_Grid_Clash.jpg" alt="Project-1" class="project-img">
-    <div class="project-details">
-         <h1>Cyber Grid Clash</h1>
-         <br>    
-         <h2><u>Languages Used</u>: HTML, CSS & JavaScript.</h2>
-         <br>
-         <a href="https://musfiqurjahin.github.io/Projects/Cyber-Grid-Clash.html" class="view-btn"><i class="fas fa-play"></i> Play</a>                        
-         <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
-    </div>
-    </div>
-    </div>
-    </div>
+          <!-- Project 1 -->
+          <div class="project-card">
+          <img src="../root_modules/Images/Projects.img/Cyber_Grid_Clash.jpg" alt="Project-1" class="project-img">
+          <div class="project-details">
+          <h1>Cyber Grid Clash</h1>
+          <br>    
+          <h2><u>Languages Used</u>: HTML, CSS & JavaScript.</h2>
+          <br>
+          <a href="https://musfiqurjahin.github.io/Projects/Cyber-Grid-Clash.html" class="view-btn"><i class="fas fa-play"></i> Play</a>                        
+          <a href="../contact/" class="view-btn"><i class="fab fa-facebook-messenger"></i> Source Code</a>
+          </div>
+          </div>
+          <!--------------------------------------------------------------------------------------------------------->
+          </div>
+        </div>
     </div>
     <script src="../root_modules/JavaScript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
@@ -101,8 +105,8 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2024; All rights reserved.</p>
-            <p>Developed by <a href="home.html" class="developer-link">me</a> 
-            <img src="root_modules/Images/Anonymous.img/Red_Mask-2.png" alt="Developer Badge" class="developer-badge"></p>
+            <p>Developed by <a href="../home/" class="developer-link">me</a> 
+            <img src="../root_modules/Images/Anonymous.img/Red_Mask-1.png" alt="Developer Badge" class="developer-badge"></p>
         </div>
     </footer>
     <!-- End of Footer HTML -->
