--- a/contact/index.htm
+++ b/contact/index.htm
@@ -169,7 +169,7 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <a href="../home/"><img src="root_modules/Images/Logo.jpg/Logo.jpg" alt="Logo.img" class="logo-img"></a>
+                    <a href="../home/"><img src="../root_modules/Images/Logo.img/Logo.jpg" alt="Logo.img" class="logo-img"></a>
                     <div class="logo-text"></div>
                 </div>
                 <nav>
