--- a/blogs/index.htm
+++ b/blogs/index.htm
@@ -48,43 +48,36 @@
             <div class="blog-wrapper">
                 <!-- Blog Post 3 -->
                 <div class="blog-post collapsed">
-                    <div class="date-time">Posted on: September 01, 2024, 17:00</div>
-                    <h2>Exploring the Future of Web Development:</h2>
-                    <img src="root_modules/Images/Verified_Badges/Green_Badge-1.png" alt="Web Development Future Image">
-                    <p>The future of web development is an exciting realm filled with possibilities, driven by emerging technologies and evolving user expectations. As the digital landscape continues to expand, developers are faced with new challenges and opportunities to create innovative and engaging web experiences. The convergence of various technologies, such as artificial intelligence, machine learning, and blockchain, is shaping the future of web development.
-                       One of the key trends is the increasing emphasis on personalization and user experience. Developers are leveraging advanced analytics and user data to create tailored experiences that cater to individual preferences and behaviors. This shift towards a more personalized web is enhancing engagement and creating more meaningful interactions between users and digital platforms.
-                       Another significant trend is the rise of web applications and progressive web apps (PWAs), which offer a more seamless and responsive experience across different devices. As web technologies continue to advance, developers are focusing on creating applications that are not only functional but also provide a high level of performance and accessibility.</p>
-                       <button class="read-more-btn">Read More</button>
-                       <button class="show-less-btn" style="display: none;">Show Less</button>
+                    <div class="date-time">Posted on: May 23, 2004, 12:10 AM</div>
+                    <h2>Version 1.0</h2>
+                    <img src="../root_modules/Images/GIF/aa59d139b93dde70ff207187c9f1d8bd.gif" alt="Blog.img">
                        <div class="actions">
-                           <span class="likes"><i class="fas fa-heart"></i>5.9k</span>
-                           <span class="reposts"><i class="fas fa-retweet"></i>3.7k</span>
-                           <span class="reposts"><i class="fas fa-paper-plane"></i>2.1k</span>
-                           <span class="reposts"><i class="fas fa-bookmark"></i>1.9k</span>
-                           <span class="views"><i class="fas fa-eye"></i>120987</span>
+                           <span class="likes"><i class="fas fa-heart"></i>998.9M</span>
+                           <span class="reposts"><i class="fas fa-retweet"></i>570.7M</span>
+                           <span class="shares"><i class="fas fa-paper-plane"></i>273.3M</span>
+                           <span class="Bookmarks"><i class="fas fa-bookmark"></i>199.4M</span>
+                           <span class="views"><i class="fas fa-eye"></i>1234567890</span>
                        </div>
                    </div>
 
                 <!-- Blog Post 2 -->
                 <div class="blog-post collapsed">
-                    <div class="date-time">Posted on: August 25, 2024, 09:30</div>
-                    <h2>The Cybersecurity Landscape:</h2>
-                    <img src="root_modules/Images/Verified_Badges/Red_Badge-1.png" alt="Cybersecurity Image">
-                    <p>The cybersecurity landscape is a constantly evolving field, driven by technological advancements and the ever-increasing sophistication of cyber threats. As organizations and individuals become more reliant on digital platforms, the need for robust security measures has never been greater. The challenge lies not only in protecting sensitive data but also in staying ahead of potential threats that could compromise security.</p>
-                    <p>Ethical hackers play a crucial role in this landscape, acting as the frontline defenders against cyberattacks. They employ a range of techniques to identify vulnerabilities and strengthen defenses, ensuring that systems remain secure amidst a sea of potential risks. This proactive approach is essential in a world where cyber threats are becoming more complex and targeted.</p>
-                    <p>As technology continues to advance, so too does the field of cybersecurity. New tools, methodologies, and best practices are continuously developed to address emerging threats. Staying informed and adapting to these changes is a critical aspect of maintaining effective security measures and ensuring that systems remain resilient in the face of evolving challenges.</p>
+                    <div class="date-time">Posted on: December 25, 2023, 09:30 PM</div>
+                    <h2>The Programmer's Loop🫠</h2>
+                    <img src="../root_modules/Images/GIF/0660efe82fa3da42ed56eef013171835.gif" alt="Blog.img">
+                    <p></p>
                     <button class="read-more-btn">Read More</button>
                     <button class="show-less-btn" style="display: none;">Show Less</button>
                     <div class="actions">
-                        <span class="likes"><i class="fas fa-heart"></i>5.9k</span>
-                        <span class="reposts"><i class="fas fa-retweet"></i>3.7k</span>
-                        <span class="reposts"><i class="fas fa-paper-plane"></i>2.1k</span>
-                        <span class="reposts"><i class="fas fa-bookmark"></i>1.9k</span>
-                        <span class="views"><i class="fas fa-eye"></i>120987</span>
+                        <span class="likes"><i class="fas fa-heart"></i>101.5M</span>
+                        <span class="reposts"><i class="fas fa-retweet"></i>69.9M</span>
+                        <span class="shares"><i class="fas fa-paper-plane"></i>54.3M</span>
+                        <span class="Bookmarks"><i class="fas fa-bookmark"></i>21.2M</span>
+                        <span class="views"><i class="fas fa-eye"></i>240,259969</span>
                     </div>
                 </div>
 
-                <!-- Blog Post 1 -->
+                <!-- Blog Post 1
                 <div class="blog-post collapsed">
                     <div class="date-time">Posted on: August 20, 2024, 14:45</div>
                     <h2>Web Development with an Ethical Edge:</h2>
@@ -101,7 +94,7 @@
                         <span class="reposts"><i class="fas fa-bookmark"></i>1.9k</span>
                         <span class="views"><i class="fas fa-eye"></i>120987</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
