--- a/about/index.htm
+++ b/about/index.htm
@@ -21,7 +21,7 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <a href="../home/"><img src="../root_modules/Images/Logo.img/" alt="Logo.img" class="logo-img"></a>
+                    <a href="../home/"><img src="../root_modules/Images/Logo.img/Logo.jpg" alt="Logo.img" class="logo-img"></a>
                     <div class="logo-text"></div>
                 </div>
                 <nav>
