--- a/index.htm
+++ b/index.htm
@@ -1,22 +1,12 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Index</title>
-    <link rel="stylesheet" href="root_modules/CSS/styles.css">
+    <title>Musfiqur Jahin</title>
 </head>
 <body>
-    <div id="home-content"></div>
-
-    <script>
-        // Fetch the content of home/index.html and insert it into this page
-        fetch('home/index.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('home-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading the home page:', error));
-    </script>
+    <iframe src="home/index.htm" width="100%" height="1000px" style="border:none;"></iframe>
 </body>
 </html>
