--- a/index.htm
+++ b/index.htm
@@ -25,5 +25,6 @@
                 console.error('Error fetching the home page:', error);
             });
     </script>
+    <script src="root_modules/JavaScript/app.js"></script>
 </body>
 </html>
