--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Index</title>
+    <title>Musfiqur Jahin</title>
     <link rel="stylesheet" href="root_modules/CSS/styles.css">
 </head>
 <body>
