--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
     <!-- Container where home/index.htm content will be loaded -->
     <div id="home-content"></div>
 
+    <script src="../musfiqurjahin.GitHub.io/root_modules/JavaScript/app.js"
     <script>
         // Create a new XMLHttpRequest object
         var xhr = new XMLHttpRequest();
