--- a/index.htm
+++ b/index.htm
@@ -3,38 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Index</title>
-    <link rel="stylesheet" href="root_modules/CSS/styles.css"> <!-- Your CSS link -->
+    <title>Redirecting...</title>
+    <script>
+        // Redirect to home/index.htm
+        window.location.href = "home/index.htm";
+    </script>
 </head>
 <body>
-    <!-- Container where home/index.htm content will be loaded -->
-    <div id="home-content"></div>
-
-    <script src="../musfiqurjahin.GitHub.io/root_modules/JavaScript/app.js"
-    <script>
-        // Create a new XMLHttpRequest object
-        var xhr = new XMLHttpRequest();
-
-        // Configure it: GET-request for the home/index.htm file
-        xhr.open('GET', 'home/index.htm', true);
-
-        // Set the callback function to run when the request is complete
-        xhr.onload = function() {
-            if (xhr.status >= 200 && xhr.status < 300) {
-                // If the request is successful, insert the response (HTML) into the div
-                document.getElementById('home-content').innerHTML = xhr.responseText;
-            } else {
-                console.error('Error loading the home page: ' + xhr.status);
-            }
-        };
-
-        // Handle errors
-        xhr.onerror = function() {
-            console.error('Request failed');
-        };
-
-        // Send the request
-        xhr.send();
-    </script>
+    <p>If you are not redirected, <a href="home/index.htm">click here</a>.</p>
 </body>
 </html>
