--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,10 @@
     <title>Redirecting...</title>
     <script>
         // Redirect to home/index.htm
-        window.location.href = "home/index.htm";
+        window.location.href = "home/";
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="home/index.htm">click here</a>.</p>
+    <p>If you are not redirected, <a href="home/">click here</a>.</p>
 </body>
 </html>
