--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
+    <link rel="icon" href="../musfiqurjahin.GitHub.io/Favicon/favicon.png">
+    <link rel="manifest" href="Favicon/favicon.png">
     <script>
-        // Redirect to home/index.htm
         window.location.href = "home/";
     </script>
 </head>
