--- a/home/index.htm
+++ b/home/index.htm
@@ -71,7 +71,12 @@
                 </div>
                 <div class="hero-text">
                     <h5>>_<span class="input"></span></h5>
-                    <h1> Musfiqur Jahin <img src="../root_modules/Images/Verified.img/Red_Badge-1.png" alt="Verified Badge" class="verified-badge"></h1>
+                    <h1> Musfiqur Jahin
+                        <div class="verified-badge-container">
+                            <img src="root_modules/Images/Verified_Badges/Red_Badge-1.png" alt="Verified Badge" class="verified-badge">
+                            <span class="verified-text">Verified</span>
+                        </div>
+                    </h1>  
                     <br>
                     <p>A seasoned Cyber Security Specialist and Full Stack Web Developer with a passion for creating secure and robust digital solutions. With a strong foundation in both front-end and back-end development, I blend technical expertise with innovative thinking to deliver comprehensive web applications that are not only efficient but also resilient against cyber threats.
 
