--- a/home/index.htm
+++ b/home/index.htm
@@ -73,7 +73,7 @@
                     <h5>>_<span class="input"></span></h5>
                     <h1> Musfiqur Jahin
                         <div class="verified-badge-container">
-                            <img src="root_modules/Images/Verified_Badges/Red_Badge-1.png" alt="Verified Badge" class="verified-badge">
+                            <img src="../root_modules/Images/Verified.img/Red_Badge-1.png" alt="Verified Badge" class="verified-badge">
                             <span class="verified-text">Verified</span>
                         </div>
                     </h1>  
