--- a/home/index.htm
+++ b/home/index.htm
@@ -70,8 +70,8 @@
                     <img src="../root_modules/Images/Profile.img/Profile_pic-2.jpg" alt="Profile.img">
                 </div>
                 <div class="hero-text">
-                    <h5>>_<span class="input"></span></h5>
-                    <h1> Musfiqur Jahin
+                    <!--<h5>>_<span class="input"></span></h5>-->
+                    <h1>Musfiqur Jahin
                         <div class="verified-badge-container">
                             <img src="../root_modules/Images/Verified.img/Red_Badge-1.png" alt="Verified Badge" class="verified-badge">
                             <span class="verified-text">Verified</span>
