--- a/about/index.htm
+++ b/about/index.htm
@@ -221,6 +221,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
+    <script src="../../Block-DevTools/index.js"></script>
     <footer>
       <div class="footer-content">
           <p>&copy; 2024; All rights reserved.</p>
