--- a/home/index.htm
+++ b/home/index.htm
@@ -95,6 +95,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="script.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
+    <script src="../../Block-DevTools/index.js"></script>
     <!-- Footer HTML -->
     <footer>
         <div class="footer-content">
