--- a/projects/index.htm
+++ b/projects/index.htm
@@ -101,6 +101,7 @@
     </div>
     <script src="../root_modules/JavaScript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
+    <script src="../../Block-DevTools/index.js"></script>
     <!--Footer html-->
     <footer>
         <div class="footer-content">
