--- a/blogs/index.htm
+++ b/blogs/index.htm
@@ -140,6 +140,7 @@ button.addEventListener('click', function() {
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
+    <script src="../../Block-DevTools/index.js"></script>
 
     <!-- Footer HTML -->
 <footer>
