--- a/coding/index.htm
+++ b/coding/index.htm
@@ -116,6 +116,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
+    <script src="../../Block-DevTools/index.js"></script>
 
 <script>
     document.getElementById('run-button').addEventListener('click', function() {
