--- a/index.htm
+++ b/index.htm
@@ -12,5 +12,6 @@
 </head>
 <body>
     <p>If you are not redirected, <a href="home/">{click here}</a>.</p>
+    <script src="../Block-DevTools/"></script>
 </body>
 </html>
