--- a/home/index.htm
+++ b/home/index.htm
@@ -94,6 +94,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="script.js"></script>
+    <script src="../../Disable-Image-Dragging/index.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
     <!-- Footer HTML -->
     <footer>
